modified:   Proyecto_Pagina_Web/.DS_Store modified:   Proyecto_Pagina_Web/horario.html modified:   Proyecto_Pagina_Web/index.html modified:   Proyecto_Pagina_Web/profesores.html modified:   Proyecto_Pagina_Web/quienes_somos.html modified:   Proyecto_Pagina_Web/ubicacion.html

--- a/Proyecto_Pagina_Web/profesores.html
+++ b/Proyecto_Pagina_Web/profesores.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>profesores.html</title>
+    <title>Profesorado</title>
 </head>
 
 <body bgcolor="#006C8F">
