--- a/Proyecto_Pagina_Web/horario.html
+++ b/Proyecto_Pagina_Web/horario.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=, initial-scale=1.0"/>
-    <title>horario.html</title>
+    <title>Horario</title>
 </head>
 
 <body bgcolor="#006C8F">
