--- a/Proyecto_Pagina_Web/ubicacion.html
+++ b/Proyecto_Pagina_Web/ubicacion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>ubicacion.html</title>
+    <title>Ubicación</title>
 </head>
 
 <body bgcolor="#006C8F">
