modified:   Proyecto_Pagina_Web/.DS_Store modified:   Proyecto_Pagina_Web/horario.html modified:   Proyecto_Pagina_Web/index.html modified:   Proyecto_Pagina_Web/profesores.html modified:   Proyecto_Pagina_Web/quienes_somos.html modified:   Proyecto_Pagina_Web/titulaciones.html modified:   Proyecto_Pagina_Web/ubicacion.html

--- a/Proyecto_Pagina_Web/titulaciones.html
+++ b/Proyecto_Pagina_Web/titulaciones.html
@@ -13,7 +13,7 @@
       <tr>
         <td align="center" width="198px" height="194px" bgcolor="#FFFFFF">
             <a href="index.html">
-                <img src="Imagenes/logo.png" alt="Esta imagen es un logo de Unir" 
+                <img src="Img/logo.png" alt="Esta imagen es un logo de Unir" 
                 width="100%" height="100%"
                 />
             </a>
@@ -33,7 +33,7 @@
         <td bgcolor="#B684OO" align="center">
             <a href="quienes_somos.html">
                 <img align="center" width="40px" height="40px" 
-                    src="Iconos/icono_quienes_somos.png" alt="Icono de persona"
+                    src="Icon/icono_quienes_somos.png" alt="Icono de persona"
                 />
                 <br/>
                 <font color="#FFFFFF">
@@ -58,11 +58,11 @@
            </tr>
 
            <tr align="center" width="100%" height="140px">
-               <td><img align="center" width="90%" height="140px" src="Imagenes/ASIR.png" alt="Ilustración de ASIR"></td>
+               <td><img align="center" width="90%" height="140px" src="Img/ASIR.png" alt="Ilustración de ASIR"></td>
           
-              <td><img align="center" width="90%" height="140px" src="Imagenes/DAM.png" alt="Ilustración de DAM"></td>
+              <td><img align="center" width="90%" height="140px" src="Img/DAM.png" alt="Ilustración de DAM"></td>
            
-              <td><img align="center" width="90%" height="140px" src="Imagenes/DAW.png" alt="Ilustración de DAW"></td>
+              <td><img align="center" width="90%" height="140px" src="Img/DAW.png" alt="Ilustración de DAW"></td>
           </tr>
 
           <tr align="center" width="100%" height="70px">
@@ -121,7 +121,7 @@
         <td bgcolor="#B684OO">
           <a href="titulaciones.html">            
                 <img align="center" width="40px" height="40px"
-                    src="Iconos/icono_titulaciones.png" alt="Icono de Universidad"
+                    src="Icon/icono_titulaciones.png" alt="Icono de Universidad"
                 />
                 <br/>
                 <font color="#FFFFFF">
@@ -135,7 +135,7 @@
         <td bgcolor="#B684OO" align="center">
           <a href="profesores.html"> 
               <img align="center" width="40px" height="40px"
-                  src="Iconos/icono_profesores.png" alt="Icono de Profesores"
+                  src="Icon/icono_profesores.png" alt="Icono de Profesores"
               />
               <br/>
               <font color="#FFFFFF">
@@ -149,7 +149,7 @@
         <td bgcolor="#B684OO" align="center">
             <a href="horario.html"> 
                 <img align="center" width="40px" height="40px"
-                    src="Iconos/icono_horario.png" alt="Icono de Horario"
+                    src="Icon/icono_horario.png" alt="Icono de Horario"
                 />
                 <br/>
                 <font color="#FFFFFF"> 
@@ -163,7 +163,7 @@
         <td bgcolor="#B684OO" align="center">
             <a href="ubicacion.html">
                 <img align="center" width="40px" height="40px"
-                    src="Iconos/icono_ubicación.png" alt="Icono de Ubicación"
+                    src="Icon/icono_ubicación.png" alt="Icono de Ubicación"
                 />
                 <br/>
                 <font color="#FFFFFF">
