--- a/Proyecto_Pagina_Web/index.html
+++ b/Proyecto_Pagina_Web/index.html
@@ -13,7 +13,7 @@
       <tr>
         <td align="center" width="198px" height="194px" bgcolor="#FFFFFF">
             <a href="index.html">
-                <img src="Imagenes/logo.png" alt="Esta imagen es un logo de Unir" 
+                <img src="Img/logo.png" alt="Esta imagen es un logo de Unir" 
                 width="100%" height="100%"
                 />
             </a>
@@ -33,7 +33,7 @@
         <td bgcolor="#B684OO" align="center">
             <a href="quienes_somos.html">
                 <img align="center" width="40px" height="40px" 
-                    src="Iconos/icono_quienes_somos.png" alt="Icono de persona"
+                    src="Icon/icono_quienes_somos.png" alt="Icono de persona"
                 />
                 <br/>
                 <font color="#FFFFFF">
@@ -53,7 +53,7 @@
         <td bgcolor="#B684OO">
           <a href="titulaciones.html">            
                 <img align="center" width="40px" height="40px"
-                    src="Iconos/icono_titulaciones.png" alt="Icono de Universidad"
+                    src="Icon/icono_titulaciones.png" alt="Icono de Universidad"
                 />
                 <br/>
                 <font color="#FFFFFF">
@@ -67,7 +67,7 @@
         <td bgcolor="#B684OO" align="center">
           <a href="profesores.html"> 
               <img align="center" width="40px" height="40px"
-                  src="Iconos/icono_profesores.png" alt="Icono de Profesores"
+                  src="Icon/icono_profesores.png" alt="Icono de Profesores"
               />
               <br/>
               <font color="#FFFFFF">
@@ -81,7 +81,7 @@
         <td bgcolor="#B684OO" align="center">
             <a href="horario.html"> 
                 <img align="center" width="40px" height="40px"
-                    src="Iconos/icono_horario.png" alt="Icono de Horario"
+                    src="Icon/icono_horario.png" alt="Icono de Horario"
                 />
                 <br/>
                 <font color="#FFFFFF"> 
@@ -95,7 +95,7 @@
         <td bgcolor="#B684OO" align="center">
             <a href="ubicacion.html">
                 <img align="center" width="40px" height="40px"
-                    src="Iconos/icono_ubicación.png" alt="Icono de Ubicación"
+                    src="Icon/icono_ubicación.png" alt="Icono de Ubicación"
                 />
                 <br/>
                 <font color="#FFFFFF">
