--- a/Proyecto_Pagina_Web/profesores.html
+++ b/Proyecto_Pagina_Web/profesores.html
@@ -13,7 +13,7 @@
       <tr>
         <td align="center" width="198px" height="194px" bgcolor="#FFFFFF">
             <a href="index.html">
-                <img src="Imagenes/logo.png" alt="Esta imagen es un logo de Unir" 
+                <img src="Img/logo.png" alt="Esta imagen es un logo de Unir" 
                 width="100%" height="100%"
                 />
             </a>
@@ -33,7 +33,7 @@
         <td bgcolor="#B684OO" align="center">
             <a href="quienes_somos.html">
                 <img align="center" width="40px" height="40px" 
-                    src="Iconos/icono_quienes_somos.png" alt="Icono de persona"
+                    src="Icon/icono_quienes_somos.png" alt="Icono de persona"
                 />
                 <br/>
                 <font color="#FFFFFF">
@@ -64,15 +64,15 @@
             </tr>
 
             <tr align="center" width="100%" height="180px" bgcolor="#F6FAEF">
-                <td><img width="160px" height="180px" src="Imagenes/imagen_profesor.png" 
+                <td><img width="160px" height="180px" src="Img/imagen_profesor.png" 
                     alt="Ilustración de Profesor"></td>
-                <td><img width="160px" height="180px" src="Imagenes/imagen_profesor.png" 
+                <td><img width="160px" height="180px" src="Img/imagen_profesor.png" 
                     alt="Ilustración de Profesor"></td>
-                <td><img width="160px" height="180px" src="Imagenes/imagen_profesor.png" 
+                <td><img width="160px" height="180px" src="Img/imagen_profesor.png" 
                     alt="Ilustración de Profesor"></td>
-                <td><img width="160px" height="180px" src="Imagenes/imagen_profesor.png" 
+                <td><img width="160px" height="180px" src="Img/imagen_profesor.png" 
                     alt="Ilustración de Profesor"></td>
-                <td><img width="160px" height="180px" src="Imagenes/imagen_profesor.png" 
+                <td><img width="160px" height="180px" src="Img/imagen_profesor.png" 
                     alt="Ilustración de Profesor"></td>
             </tr>
 
@@ -119,7 +119,7 @@
         <td bgcolor="#B684OO">
           <a href="titulaciones.html">            
                 <img align="center" width="40px" height="40px"
-                    src="Iconos/icono_titulaciones.png" alt="Icono de Universidad"
+                    src="Icon/icono_titulaciones.png" alt="Icono de Universidad"
                 />
                 <br/>
                 <font color="#FFFFFF">
@@ -133,7 +133,7 @@
         <td bgcolor="#B684OO" align="center">
           <a href="profesores.html"> 
               <img align="center" width="40px" height="40px"
-                  src="Iconos/icono_profesores.png" alt="Icono de Profesores"
+                  src="Icon/icono_profesores.png" alt="Icono de Profesores"
               />
               <br/>
               <font color="#FFFFFF">
@@ -147,7 +147,7 @@
         <td bgcolor="#B684OO" align="center">
             <a href="horario.html"> 
                 <img align="center" width="40px" height="40px"
-                    src="Iconos/icono_horario.png" alt="Icono de Horario"
+                    src="Icon/icono_horario.png" alt="Icono de Horario"
                 />
                 <br/>
                 <font color="#FFFFFF"> 
@@ -161,7 +161,7 @@
         <td bgcolor="#B684OO" align="center">
             <a href="ubicacion.html">
                 <img align="center" width="40px" height="40px"
-                    src="Iconos/icono_ubicación.png" alt="Icono de Ubicación"
+                    src="Icon/icono_ubicación.png" alt="Icono de Ubicación"
                 />
                 <br/>
                 <font color="#FFFFFF">
