--- a/Proyecto_Pagina_Web/quienes_somos.html
+++ b/Proyecto_Pagina_Web/quienes_somos.html
@@ -33,7 +33,7 @@
         <td bgcolor="#B684OO" align="center">
             <a href="quienes_somos.html">
                 <img align="center" width="40px" height="40px" 
-                    src="Iconos/icono_quienes_somos.png" alt="Icono de persona"
+                    src="Icon/icono_quienes_somos.png" alt="Icono de persona"
                 />
                 <br/>
                 <font color="#FFFFFF">
@@ -51,7 +51,7 @@
                 <br>Preparamos a los profesionales del presente y del futuro mediante una formación 
                 <br>práctica y totalmente actualizada, adaptada a las necesidades del mercado 
                 <br>y orientada a conseguir resutlados desde el primer día</font></p>
-            <img src="Imagenes/foto_unir.jpg" width="240px" height="240px" alt="Foto de Bienvenida a UNIR">
+            <img src="Img/foto_unir.jpg" width="240px" height="240px" alt="Foto de Bienvenida a UNIR">
 
         </td>
     </tr>
@@ -60,7 +60,7 @@
         <td bgcolor="#B684OO">
           <a href="titulaciones.html">            
                 <img align="center" width="40px" height="40px"
-                    src="Iconos/icono_titulaciones.png" alt="Icono de Universidad"
+                    src="Icon/icono_titulaciones.png" alt="Icono de Universidad"
                 />
                 <br/>
                 <font color="#FFFFFF">
@@ -74,7 +74,7 @@
         <td bgcolor="#B684OO" align="center">
           <a href="profesores.html"> 
               <img align="center" width="40px" height="40px"
-                  src="Iconos/icono_profesores.png" alt="Icono de Profesores"
+                  src="Icon/icono_profesores.png" alt="Icono de Profesores"
               />
               <br/>
               <font color="#FFFFFF">
@@ -88,7 +88,7 @@
         <td bgcolor="#B684OO" align="center">
             <a href="horario.html"> 
                 <img align="center" width="40px" height="40px"
-                    src="Iconos/icono_horario.png" alt="Icono de Horario"
+                    src="Icon/icono_horario.png" alt="Icono de Horario"
                 />
                 <br/>
                 <font color="#FFFFFF"> 
@@ -102,7 +102,7 @@
         <td bgcolor="#B684OO" align="center">
             <a href="ubicacion.html">
                 <img align="center" width="40px" height="40px"
-                    src="Iconos/icono_ubicación.png" alt="Icono de Ubicación"
+                    src="Icon/icono_ubicación.png" alt="Icono de Ubicación"
                 />
                 <br/>
                 <font color="#FFFFFF">
