modified:   Proyecto_Pagina_Web/profesores.html modified:   Proyecto_Pagina_Web/quienes_somos.html

--- a/Proyecto_Pagina_Web/quienes_somos.html
+++ b/Proyecto_Pagina_Web/quienes_somos.html
@@ -13,7 +13,7 @@
       <tr>
         <td align="center" width="198px" height="194px" bgcolor="#FFFFFF">
             <a href="index.html">
-                <img src="Imagenes/logo.png" alt="Esta imagen es el logo de Unir" 
+                <img src="Img/logo.png" alt="Esta imagen es el logo de Unir" 
                 width="100%" height="100%"
                 />
             </a>
