--- a/Proyecto_Pagina_Web/profesores.html
+++ b/Proyecto_Pagina_Web/profesores.html
@@ -96,19 +96,19 @@
 
             <tr align="center" width="100%" height="70px" bgcolor="#78C3DC">
                 <td>
-                    <a href="profeBBDD@gmail.com">Email de Contacto</a>
+                    <a href=mailto:"profeBBDD@gmail.com">Email de Contacto</a>
                 </td>
                 <td>
-                    <a href="ProfeLenguajeMarcas@gmail.com">Email de Contacto</a>
+                    <a href=mailto:"ProfeLenguajeMarcas@gmail.com">Email de Contacto</a>
                 </td>
                 <td>
-                    <a href="ProfeEntornosProgramación@gmail.com">Email de Contacto</a>
+                    <a href=mailto:"ProfeEntornosProgramación@gmail.com">Email de Contacto</a>
                 </td>
                 <td>
-                    <a href="ProfeSistemas@gmail.com">Email de Contacto</a>
+                    <a href=mailto:"ProfeSistemas@gmail.com">Email de Contacto</a>
                 </td>
                 <td>
-                    <a href="ProfeFOL@gmail.com">Email de Contacto</a>
+                    <a href=mailto:"ProfeFOL@gmail.com">Email de Contacto</a>
                 </td>
             </tr>
             </table>
